Creating Controllers for create issue and Project

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,1 +1,6 @@
-<h4>Footer</h4>
+<footer class="footer mt-auto py-2 bg-dark">
+    <div class="text-center p-2 text-light">
+        © 2023 Copyright:
+        <a class="text-light" href="">Krishna Kant Singh</a>
+      </div>
+</footer>  
