--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,14 @@
-<footer class="footer mt-auto py-2 bg-dark">
-    <div class="text-center p-2 text-light">
-        © 2023 Copyright:
-        <a class="text-light" href="">Krishna Kant Singh</a>
+<style>
+  footer div a:hover{
+    color: #9a41ed !important;
+    font-size: 1.005rem !important;
+    text-decoration: none;
+  }
+</style>
+
+<footer class="footer mt-auto py-2 bg-light">
+    <div class="text-center p-2 text-dark">
+        Design By:
+        <a class="text-dark" target="_blank" href="https://www.linkedin.com/in/krishna-kant-singh-ab391a1b1/">Krishna Kant Singh</a>
       </div>
 </footer>  
