--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,10 +1,22 @@
-<nav class="navbar navbar-dark bg-dark" aria-label="First navbar example">
+<style>
+  nav a {
+    font-family: 'Belanosima', sans-serif;
+    font-size: 1.8rem;
+    letter-spacing: 1px;
+  }
+</style>
+
+<nav class="navbar navbar-dark bg-dark py-3" aria-label="First navbar example">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Issue Tracker</a>
+      <div class="d-flex px-2">
+        <img src="https://img.icons8.com/?size=512&id=bCQLZcbLhzxl&format=png" alt="" width="40">
+        <a class="navbar-brand ps-2" href="#">Issue Tracker</a>
+      </div>
+      
       <% if( title === "Project Page"){ %> 
-        <%- include('_issueForm'); %> 
+        <%- include('_issue_form'); %> 
       <% }else{ %> 
-        <%- include('_projectForm'); %> 
+        <%- include('_project_form'); %> 
       <% } %>
     </div>
   </nav>
